--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Solar System Planets Data</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="p-4 md:p-8">
+<body>
     <div id="stars-container"></div>
     
     <header class="text-center mb-8 mt-4">
@@ -36,7 +36,7 @@
                         </div>
                     </td>
                     <td>57.9 million km</td>
-                    <td>0.330 × 10<sup>24</sup> kg</td>
+                    <td>$0.330 \times 10^{24}$ kg</td>
                     <td>4,879 km</td>
                     <td>88 days</td>
                     <td>59 days</td>
@@ -50,7 +50,7 @@
                         </div>
                     </td>
                     <td>108.2 million km</td>
-                    <td>4.87 × 10<sup>24</sup> kg</td>
+                    <td>$4.87 \times 10^{24}$ kg</td>
                     <td>12,104 km</td>
                     <td>225 days</td>
                     <td>243 days</td>
@@ -64,7 +64,7 @@
                         </div>
                     </td>
                     <td>149.6 million km</td>
-                    <td>5.97 × 10<sup>24</sup> kg</td>
+                    <td>$5.97 \times 10^{24}$ kg</td>
                     <td>12,756 km</td>
                     <td>365.2 days</td>
                     <td>24 hours</td>
@@ -78,7 +78,7 @@
                         </div>
                     </td>
                     <td>227.9 million km</td>
-                    <td>0.642 × 10<sup>24</sup> kg</td>
+                    <td>$0.642 \times 10^{24}$ kg</td>
                     <td>6,792 km</td>
                     <td>687 days</td>
                     <td>24.6 hours</td>
@@ -92,7 +92,7 @@
                         </div>
                     </td>
                     <td>778.5 million km</td>
-                    <td>1,898 × 10<sup>24</sup> kg</td>
+                    <td>$1,898 \times 10^{24}$ kg</td>
                     <td>142,984 km</td>
                     <td>11.9 years</td>
                     <td>9.9 hours</td>
@@ -106,7 +106,7 @@
                         </div>
                     </td>
                     <td>1,432 million km</td>
-                    <td>568 × 10<sup>24</sup> kg</td>
+                    <td>$568 \times 10^{24}$ kg</td>
                     <td>120,536 km</td>
                     <td>29.5 years</td>
                     <td>10.7 hours</td>
@@ -120,7 +120,7 @@
                         </div>
                     </td>
                     <td>2,867 million km</td>
-                    <td>86.8 × 10<sup>24</sup> kg</td>
+                    <td>$86.8 \times 10^{24}$ kg</td>
                     <td>51,118 km</td>
                     <td>84 years</td>
                     <td>17.2 hours</td>
@@ -134,7 +134,7 @@
                         </div>
                     </td>
                     <td>4,515 million km</td>
-                    <td>102 × 10<sup>24</sup> kg</td>
+                    <td>$102 \times 10^{24}$ kg</td>
                     <td>49,528 km</td>
                     <td>165 years</td>
                     <td>16.1 hours</td>
